<resources>
    <string name="app_name">Skin Cancer Detection</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_view_carts">View carts</string>
    <string name="button_add_product">Add product</string>
    <string name="button_validate">Validate</string>

    <string name="menu_item_home">Home</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_admin">Admin</string>
    <string name="menu_item_profile">Profile</string>

    <string name="message_password_not_identical">The passwords are not identical</string>
    <string name="message_password_length">The password must have between 8 and 40 characters</string>
    <string name="message_invalid_password">Invalid password</string>
    <string name="message_invalid_email">Invalid email</string>
    <string name="message_back_twice">Press back again to exit</string>
    <string name="message_success">Success \u2713</string>

    <string name="profile_user_id">ID: %1$s</string>
    <string name="profile_user_email">Email: %1$s</string>
    <string name="profile_user_password">Password: %1$s</string>
    <string name="profile_user_first_name">First name:</string>
    <string name="profile_user_last_name">Last name:</string>
    <string name="profile_user_date_of_birth">Date of birth:</string>
    <string name="profile_user_phone_number">Phone number:</string>
    <string name="profile_user_gender">Gender:</string>
    <string name="profile_user_join_date">Join date: %1$s</string>

    <string name="message_default_error">An error has occurred</string>
    <string name="source_camera">Camera</string>
    <string name="source_gallery">Gallery</string>
    <string name="select_source">Select source</string>

    <string name="carts_number">Carts number: %s</string>
    <string name="product_price_unit">Average price: $%s/unit</string>
    <string name="product_price_weight">Average price: $%s/100g</string>
    <string name="product_category">Category: %s</string>
    <string name="product_carts_number">Preferred in: %s carts</string>
    <string name="product_additional_info">Additional info: %s</string>
    <string name="product_name">Name: %s</string>
    <string name="most_popular_products">Most popular products</string>
    <string name="rec_product_popularity_info">%s appears in %d carts</string>
    <string name="rec_product_content_info">%s appears along with the selected products in %d carts</string>
    <string name="rec_product_already_in_cart">%s is already in cart</string>
    <string name="rec_product_added_in_cart">%s added \u2713</string>
    <string name="my_cart">My cart</string>
    <string name="cart_empty">Cart empty</string>

    <string name="header_home">Skin Cancer Detection</string>
    <string name="home_malign">Malign</string>
    <string name="home_benign">Benign</string>
    <string name="home_results">Results</string>
    <string name="home_history_results">History Results</string>
    <string name="home_image">IMAGE UPLOAD</string>
    <string name="home_image_date">Image date: %1$s</string>
    <string name="home_percentage">%d%</string>
    <string name="home_date">Date</string>
    <string name="header_home_results">Results</string>
    <string name="header_categories">Categories</string>
    <string name="header_carts">Carts</string>
    <string name="header_products">Products</string>
    <string name="recommendations">Recommendations</string>

</resources>