<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/horizontal_padding"
    android:paddingEnd="@dimen/horizontal_padding">

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/edit_text_height"
        android:paddingStart="@dimen/edit_text_horizontal_padding"
        android:paddingEnd="@dimen/edit_text_horizontal_padding"
        android:textColorHint="@color/colorHint"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="@dimen/edit_text_height"
        android:paddingStart="@dimen/edit_text_horizontal_padding"
        android:paddingEnd="@dimen/edit_text_horizontal_padding"
        android:textColorHint="@color/colorHint"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:minHeight="@dimen/edit_text_height"
        android:paddingStart="@dimen/edit_text_horizontal_padding"
        android:paddingEnd="@dimen/edit_text_horizontal_padding"
        android:textColorHint="@color/colorHint"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <Button
        android:id="@+id/registerButton"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/button_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>