<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resultsHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/home_results"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="386dp"
        android:layout_height="399dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_cart" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/home_date"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/imageDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_gravity="center"
        tools:text="Image date: 05/10/2020" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/malignResultTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/home_malign"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/malignPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_gravity="center"
        tools:text="50%" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/benignResultTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/home_benign"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Procentaj pentru rezultatul "Benign" -->
    <TextView
        android:id="@+id/benignPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_gravity="center"
        tools:text="50%" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
