<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cartLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCartBackground"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/cartTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_radius_background"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/my_cart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/profile_text_size" />

            <TextView
                android:id="@+id/cartProductsNumberTextView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_item_background"
                android:elevation="10dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="1dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="17" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_cart_product" />

        <TextView
            android:id="@+id/cartEmptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cart_empty"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCartProductCardView" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/cartRecommendationsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cartLinearLayout"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/recommendations"
        android:textSize="18sp" />

    <View
        android:id="@+id/cartRecommendationsSeparatorView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/cartRecommendationsTextView"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cartAddProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/cartValidateButton"
        android:backgroundTint="@android:color/white"
        android:src="@drawable/icon_plus"
        android:tint="@color/colorPrimary"
        app:fabCustomSize="@dimen/fab_size"
        app:maxImageSize="@dimen/fab_image_size" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cartValidateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:src="@drawable/icon_check"
        android:tint="@color/colorPrimary"
        app:fabCustomSize="@dimen/fab_size"
        app:maxImageSize="@dimen/fab_image_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cartRecommendationsSeparatorView"
        android:clipToPadding="false"
        android:layoutAnimation="@anim/fall_layout_animation"
        android:paddingBottom="90dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_rec_category" />

</RelativeLayout>