<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePhotoCardView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="80dp"
                app:cardPreventCornerOverlap="false">

                <ImageView
                    android:id="@+id/profilePhotoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/item_placeholder_padding" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profileIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/profile_text_size"
                tools:text="ID: 451" />

            <TextView
                android:id="@+id/profileEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/profile_text_size"
                tools:text="Email: test@gmail.com" />

            <TextView
                android:id="@+id/profilePasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/profile_text_size"
                tools:text="Password: ********" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:text="@string/profile_user_first_name"
                    android:textSize="@dimen/profile_text_size" />

                <EditText
                    android:id="@+id/profileFirstNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:inputType="text"
                    android:minHeight="@dimen/edit_text_height"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:text="@string/profile_user_last_name"
                    android:textSize="@dimen/profile_text_size" />

                <EditText
                    android:id="@+id/profileLastNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:inputType="text"
                    android:minHeight="@dimen/edit_text_height"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:text="@string/profile_user_gender"
                    android:textSize="@dimen/profile_text_size" />

                <FrameLayout
                    android:id="@+id/profileGenderFrameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:minHeight="@dimen/edit_text_height"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/profileGenderTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:minHeight="@dimen/edit_text_height"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        tools:text="Male" />

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/profileJoinDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/profile_text_size"
                tools:text="Join date: 05/10/2020" />

            <TextView
                android:id="@+id/profileCartsNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_radius_background"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/profile_text_size"
                tools:text="Carts number: 23" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/profileViewCartsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@android:color/white"
                    android:src="@drawable/icon_cart"
                    android:tint="@color/colorPrimary"
                    app:fabCustomSize="@dimen/fab_size"
                    app:maxImageSize="@dimen/fab_image_size" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/profileLogoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@android:color/white"
                    android:src="@drawable/icon_logout"
                    android:tint="@color/colorPrimary"
                    app:fabCustomSize="@dimen/fab_size"
                    app:maxImageSize="@dimen/fab_image_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profileValidateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:src="@drawable/icon_check"
        android:tint="@color/colorPrimary"
        app:fabCustomSize="@dimen/fab_size"
        app:maxImageSize="@dimen/fab_image_size" />

</RelativeLayout>